--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
     "@types/validator": "^13.6.3",
-    "antd": "^4.16.10",
+    "ant-design-pro": "^2.3.2",
+    "antd": "^4.16.11",
     "axios": "^0.21.1",
     "history": "^4.10.1",
     "react": "^17.0.2",
