--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "redux": "^4.1.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "reqwest": "^2.0.5",
     "typescript": "^4.3.5",
     "validator": "^13.6.0",
     "web-vitals": "^1.1.2"
